# src/main/java/com/shohhet/servletapp/service/dto/eventDto/EventDto.java
@@ -1,3 +1,0 @@
-package com.shohhet.servletapp.service.dto.eventDto;
-
-public record EventDto(Integer id, com.shohhet.servletapp.service.dto.userDto.UserDto user, com.shohhet.servletapp.service.dto.fileDto.FileDto file) { }
